  - cast selected value to string for comparison in html_radios
    (Exeption, monte)
  - updated html_select_date's year_as_text-feature to be xhtml compliant
    (Mark West, messju)
  - fix handling of selected month html_select_date (Yuri Weseman, messju)

Version 2.6.9 (Mar 31, 2005)
----------------------------

  - disallow variable function calls in {if} statements (messju, monte)
  - disallow variable function calls in {math} equations (messju, monte)

Version 2.6.8 (Mar 21, 2005)
----------------------------

  - remove e-modifier from regex_replace modifier (messju)
  - remove cast of object to array in foreach's from-attribute (messju)
  - add "null" as a valid token for {if} when security is enabled (messju)
  - add javascript_charcode encoding option to mailto function
    (monte)
  - add ids to html_radios labels (monte, menulis)
  - fix handling of strip-tags with non-default delimiters (Mark West, messju)

Version 2.6.7 (Feb 3, 2005)
---------------------------

  - fix handling of hashed opening php-tags inside strip-blocks (messju)
  - removed border tag from html_image function (monte)
  - change escape:url use rawurlencode() instead of urlencode() (messju)
  - make $smarty.const.FOO compile to "FOO", and not to "constant('foo')".
    this is less code and a little faster execution. note that undefined
    constants are now displayed as the constant's name. (messju)
  - make block functions and registered objects' block methods use a
    local variable for block_content instead of a property of $smarty (messju)
  - fix escaping in the generated code that calls smarty_core_load_plugins
    (jes5199, messju)
  - fix invalid HTML issue with popup (Stefanos Harhalakis,
    Monte)
  - fixed {popup} to properly handle inarray and function parameters and added
    support for mouseoff and followmouse options (boots)

Version 2.6.6 (Oct 13, 2004)
----------------------------

  - fixed nocache-handling with nested includes (Lars Jankowfsky, messju)